# jieba-py

./: .gitignore  Changelog  MANIFEST.in  Makefile  README.md  ReadMe.md  pyproject.toml  run_test.sh  script_helper.py  setup.py
data/: PeopleDaily199801_small.txt
docs/: 01-intro.rst  02-usage.rst  02_usage.rst  04-data.rst  07-removed.rst  08-append.rst  08_append.rst  09-old.rst  09_old.rst  conf.py  index.rst  rel_txt.csv
docs/_static/: custom.css  generate_logo.py  generate_logo_svg.py
docs/demos/: demo_extract_tags.py  demo_load.py  demo_pseg.py  demo_tokenize_default.py  demo_tokenize_search.py  demo_usage.py  demo_useradd.py  demo_userdict.py  dict_demo.txt
docs/locale/en/LC_MESSAGES/: 01-intro.po  02-usage.po  04-data.po  07-removed.po  08-append.po  09-old.po  index.po
jieba/: __init__.py  __main__.py  _compat.py  finalseg.py  posseg.py  utils.py
jieba/_data/: readme.md
jieba/analyse/: __init__.py  textrank.py
jieba/tests/: test_analyse.py  test_compat.py  test_finalseg.py  test_init.py  test_posseg.py  test_utils.py
test/: conftest.py  demo.py  extract_tags.py  extract_tags_idfpath.py  extract_tags_stop_words.py  extract_tags_with_weight.py  extract_topic.py  jieba_test.py  test_base.py  test_bug.py  test_change_dictpath.py  test_cut_for_search.py  test_cutall.py  test_file.py  test_lock.py  test_multithread.py  test_no_hmm.py  test_pos.py  test_pos_file.py  test_pos_no_hmm.py  test_tokenize.py  test_tokenize_no_hmm.py  test_userdict.py  test_whoosh.py  test_whoosh_file.py  test_whoosh_file_read.py
test/extra/: test_jieba.py
test/parallel/: extract_tags.py  test2.py  test_cut_for_search_para.py  test_disable_hmm.py  test_file_para.py  test_pos_file_para.py  test_pos_para.py
venv314/: pyproject.toml
wrapper/: analyzer.py
